Ar:se sube logica para el entregable 3

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.6</spring-cloud.version>
+		<sonar.host.url>http://localhost:9001</sonar.host.url>
+		<sonar.token>sqp_b1cd70d95367ac8bb7823b270d9b941901337c95</sonar.token>
+		<sonar.projectKey>credit</sonar.projectKey>
+		<sonar.projectName>credit</sonar.projectName>
+		<sonar.exclusions>pom.xml</sonar.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -214,29 +219,11 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			<!--<plugin>
-				<groupId>org.openapitools</groupId>
-				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<version>5.1.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<inputSpec>${project.basedir}/src/main/resources/ms-credits.api.yml</inputSpec>
-							<generatorName>spring</generatorName>
-							<apiPackage>com.nttdata.credit.api</apiPackage>
-							<modelPackage>com.nttdata.credit.model</modelPackage>
-							<supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
-							<configOptions>
-								<delegatePattern>true</delegatePattern>
-							</configOptions>
-							<enablePostProcessFile>true</enablePostProcessFile>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>-->
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.8.0.2131</version>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
